feat: create room type with room
