# domain/room_type.go
@@ -3,20 +3,21 @@ package domain
 import "time"
 
 type RoomType struct {
-	ID         int       `json:"id" db:"id"`
-	NAME       string    `json:"name" db:"name"`
-	DETAIL     string    `json:"detail" db:"detail"`
-	PRICE      *float32  `json:"price" db:"price"`
+	ID          int       `json:"id" db:"id"`
+	NAME        string    `json:"name" db:"name"`
+	DETAIL      string    `json:"detail" db:"detail"`
+	PRICE       *float32  `json:"price" db:"price"`
+	ROOM        *[]ROOM   `json:"room,omitempty" db:"-"`
 	ACCOMMODATE int       `json:"accommodate" db:"accommodate"`
-	IS_ACTIVE  bool      `json:"isActive" db:"is_active"`
-	UPDATED_AT time.Time `json:"updateAt" db:"updated_at"`
-	CREATED_AT time.Time `json:"createdAt" db:"created_at"`
+	IS_ACTIVE   bool      `json:"isActive" db:"is_active"`
+	UPDATED_AT  time.Time `json:"updateAt" db:"updated_at"`
+	CREATED_AT  time.Time `json:"createdAt" db:"created_at"`
 }
 
 type RoomTypeRepository interface {
 	GetAll() (*[]RoomType, error)
 	GetByID(id int) (*RoomType, error)
-	Create(roomType *RoomType) error
+	Create(roomType *RoomType) (*int, error)
 	Update(roomType *RoomType) error
 	UpdateIsActive(id int, isActive bool) error
 }
@@ -24,7 +25,7 @@ type RoomTypeRepository interface {
 type RoomTypeUsecase interface {
 	GetAll() (*[]RoomType, error)
 	GetByID(id int) (*RoomType, error)
-	Create(roomType *RoomType) error
+	Create(roomType *RoomType) (*int, error)
 	Update(roomType *RoomType) error
 	UpdateIsActive(id int, isActive bool) error
 }
